--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Kalam:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 </head>
 
 <body>
@@ -13,18 +14,49 @@
     <div class="the-episode__season-episode">
       <span>S</span>
       <i></i>
-      <span id="season"></span>
+      <span id="season" class="data-season"></span>
       <i></i>
       <span>E</span>
       <i></i>
-      <span id="episode"></span>
+      <span id="episode" class="data-episode"></span>
     </div>
 
     <div class="the-episode__episode-title">
-      <span id="title"></span>
+      <span id="title" class="data-title"></span>
+    </div>
+
+    <div class="the-episode__scroll-indicator">
+      <svg viewBox="0 0 45 65" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <title>mouse</title>
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="mouse" fill="#D8D8D8">
+            <g id="Mouse" transform="translate(0.000000, 2.000000)">
+              <path d="M0.0306285599,52 L0,52 L0,9 L0.0306285599,9 C0.646433335,3.98571764 10.4708182,0 22.5,0 C34.5291818,0 44.3535667,3.98571764 44.9693714,9 L45,9 L45,52 L44.9693714,52 C44.3535667,57.0142824 34.5291818,61 22.5,61 C10.4708182,61 0.646433335,57.0142824 0.0306285599,52 L0.0306285599,52 Z M2.02790602,50.5901639 L2,50.5901639 L2,10.4098361 L2.02790602,10.4098361 C2.58897259,5.72435911 11.5400788,2 22.5,2 C33.4599212,2 42.4110274,5.72435911 42.972094,10.4098361 L43,10.4098361 L43,50.5901639 L42.972094,50.5901639 C42.4110274,55.2756409 33.4599212,59 22.5,59 C11.5400788,59 2.58897259,55.2756409 2.02790602,50.5901639 L2.02790602,50.5901639 Z"
+                id="Outline"></path>
+              <path d="M20.0034032,14.9672131 L20,14.9672131 L20,10.0327869 L20.0034032,10.0327869 C20.0718259,9.45737743 21.1634242,9 22.5,9 C23.8365758,9 24.9281741,9.45737743 24.9965968,10.0327869 L25,10.0327869 L25,14.9672131 L24.9965968,14.9672131 C24.9281741,15.5426226 23.8365758,16 22.5,16 C21.1634242,16 20.0718259,15.5426226 20.0034032,14.9672131 L20.0034032,14.9672131 Z"
+                id="ScrollWheel"></path>
+            </g>
+          </g>
+        </g>
+      </svg>
+    </div>
+    <img id="tmdb-watermark" src="https://www.themoviedb.org/images/v4/logos/408x161-powered-by-rectangle-blue.png" alt="The movie db">
+  </div>
+
+  <div class="the-details">
+    <div class="the-details__summary grid">
+      <div class="grid__item">Season <span class="data-season"></span> Episode <span class="data-episode"></span></div>
+      <div class="grid__item data-title"></div>
+    </div>
+
+    <div class="the-details__body grid">
+      <div class="grid__item">
+        <h2>Summary</h2>
+        <p class="data-summary">Loading more data...</p>
+      </div>
     </div>
   </div>
-  <script src="bundle.js"></script>
+  <script async src="bundle.js"></script>
 </body>
 
 </html>
