Adds playful dots to details

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
 
   <div class="the-details">
     <div class="the-details__summary grid">
-      <div class="grid__item">Season <span class="data-season"></span> Episode <span class="data-episode"></span></div>
-      <div class="grid__item data-title"></div>
+      <div class="grid__item">Season <span class="data-season"></span><i></i> Episode <span class="data-episode"></span><i></i></div>
+      <div class="grid__item"><span class="data-title"></span><i></i></div>
     </div>
 
     <div class="the-details__body grid">
