--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,12 @@
 
   <div class="the-details">
     <div class="the-details__summary grid">
-      <div class="grid__item">Season <span class="data-season"></span><i></i> Episode <span class="data-episode"></span><i></i></div>
+      <div class="grid__item">
+        <span>Season</span>
+        <span class="data-season"></span><i></i>
+        <span>Episode</span>
+        <span class="data-episode"></span><i></i>
+      </div>
       <div class="grid__item"><span class="data-title"></span><i></i></div>
     </div>
 
