--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="loader"><span class="loader__content"><i></i><i></i><i></i></span></div>
   <div class="container the-episode">
     <div class="the-episode__season-episode">
       <span>S</span>
