Adds bouncing to loader

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <img id="tmdb-watermark" src="https://www.themoviedb.org/images/v4/logos/408x161-powered-by-rectangle-blue.png" alt="The movie db">
   </div>
 
-  <div class="the-details">
+  <div class="the-details hiddenInitial">
     <div class="the-details__summary grid">
       <div class="grid__item">
         <span>Season</span>
